--- a/clases/inferencia.html
+++ b/clases/inferencia.html
@@ -7,6 +7,7 @@
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
     <script src="libs/tile-view/tile-view.js"></script>
+    <link href="libs/tachyons/tachyons.min.css" rel="stylesheet" />
     <script src="libs/clipboard/clipboard.min.js"></script>
     <link href="libs/xaringanExtra-clipboard/xaringanExtra-clipboard.css" rel="stylesheet" />
     <script src="libs/xaringanExtra-clipboard/xaringanExtra-clipboard.js"></script>
@@ -44,39 +45,63 @@ background-size: cover
 .palegrey[.right[.footnote[Graphic by [Katie](https://www.rawpixel.com/image/2357171/free-illustration-image-abstract-background-color)]]]
 
 ---
-class: inverse, middle, center
+# En la clase de hoy:
 
-# Why do you need a personal website?
+- Concepto de inferencia. Población y muestra. 
 
-&lt;ion-icon name="checkmark-outline"&gt;&lt;/ion-icon&gt;
+- Inferencia sobre la media con y sin varianza conocida
+
+- Inferencia en el proceso Bernoulli 
+
+- Intervalos de confianza 
+
+--
+
+### .orange[**Recreo**] ☕🧉
+
+--
+
+- Problemas de aplicación en **R**
+
+---
+
+#Estadística Inferencial
+
+.bg-washed-light-purple.b--orange.ba.bw2.br3.shadow-2.ph4.mt5[
+Permite estimar parámetros poblacionales
+
+Probar hipótesis formuladas por sobre una población
+
+Construir modelos estadísticos y efectuar predicciones
+]
+---
+# Recordar:
+
+**Población**: es el conjunto de todos los individuos de interés. Normalmente es demasiado grande para poder abarcarla toda = censo
+
+--
+
+**Muestra**: es un subconjunto representativo de la población y es sobre el que realmente hacemos las observaciones
+
+--
+
+**Variable**: es la característica de interés que es medida en cada uno de los individuos
+
+--
+
+**Observación o dato**: es el valor particular que toma la variable en cada individuo
+
+--
+
+**Unidad Experimental**: es la menor unidad de la cual se obtiene una observación independiente
+
 ---
 
 # Some benefits
 
-✔️  Another way to practice your communication skills
+✔️ 
 
---
 
-✔️  Exchange knowledge with colleagues and expansion of your networking
-
---
-
-✔️  Sharing ideas and experiences can be useful for the community
-
---
-
-✔️  A platform to connect with the world.
-
----
-background-image: url(images/language.jpg)
-background-size: cover
-class: center, middle, inverse
-
-##.my-hot-DarkBlue[Overcoming]
-##.my-hot-DarkBlue[language barriers with]
-#.my-hot-DarkBlue[a multilingual website]
-
-.palegrey[.left[.footnote[Graphic by [Hannah Wright](https://unsplash.com/s/photos/language?utm_source=unsplash&amp;amp;utm_medium=referral&amp;amp;utm_content=creditCopyText")]]]
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
