--- a/clases/inferencia.html
+++ b/clases/inferencia.html
@@ -97,8 +97,29 @@ Construir modelos estadísticos y efectuar predicciones
 
 ---
 
-# Some benefits
+## Distribución de Probabilidades
 
+**.orange[Función de densidad f(x)]** es una función que describe la distribución de probabilidades de la variable aleatoria continua x.
+
+
+.center[
+&lt;img src="img/densidad.jpg" width="100%"/&gt;
+]
+
+---
+# Distribución Normal
+
+.center[
+`\(X \sim {\sf N}(\mu, \sigma^2)\)`
+]
+
+![](inferencia_files/figure-html/unnamed-chunk-1-1.png)&lt;!-- --&gt;
+
+- Media, mediana y moda coinciden.
+
+- Dominio de la variable -∞&lt; x &lt; ∞
+
+---
 ✔️ 
 
 
